# practice.rickhenry.studio

./: Dockerfile  devenv.nix  litestream.dev.yml  pyproject.toml
.github/workflows/: docker.yml
app/: README.md  bun.lockb  db.sqlite3  manage.py  tailwind.config.js  tsconfig.json
app/.github/workflows/: docker.yml
app/core/: admin.py  models.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_student_user_alter_teacher_user.py
app/core/templates/core/: index.html
app/core/templatetags/: customfilters.py
app/passkey_auth/static/: passkey.js
app/passkey_auth/templates/: user_profile.html
app/passkey_auth/templates/_partials/: user_profile.html
app/sheets/: models.py
app/static-src/: main.css
app/studiopractice/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: 404.html  base.html  base_htmx.html  base_primary.html
app/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
