[tool.poetry]
name = "studiopractice"
version = "0.1.0"
description = "Generate practice notes and documents for my students"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
types-dj-database-url = "^1.3.0.4"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
webauthn = "^1.10.1"
django-htmx = "^1.16.0"
django-stubs = "^4.2.4"
django-stubs-ext = "^4.2.2"
dj-database-url = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
flake8 = "^6.1.0"
djlint = "^1.32.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["settings.py", "urls.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "studiopractice.settings"

[tool.isort]
skip = [".gitignore", ".dockerignore"]
skip_glob = [".venv/*"]
profile = "black"
